<resources>
    <string name="app_name">studentid</string>
    <string name="read_ndef_message_from_nfc">Read NDEF Message from NFC</string>
    <string name="testing_purposes">Testing Purposes</string>
    <string name="write_nfc">Write NFC!</string>
    <string name="all_the_readed_contents_will_display_above">The attendance code will be displayed above</string>
    <string name="bring_near_the_nfc_tag_to_the_device">Bring near the NFC tag to the device!</string>
    <string name="read_nfc_data">Read NFC Data</string>
    <string name="write_nfc_data">Write NFC Data</string>
    <string name="read_nfc">Read NFC!</string>
    <string name="enter_the_text_in_the_below_text_box_and_bring_the_nfc_tag_near">Enter the text in the below text box and bring the nfc tag near!</string>
    <string name="the_attendance_code">The attendance code</string>
    <string name="attendance_code_descriptor">The Attendance code for the lesson is:</string>
    <string name="register_btn">Registration</string>
    <string name="email_hint">Enter E-mail address</string>
    <string name="confirm_password_hint">confirm password\n</string>
    <string name="password_hint">password</string>
    <string name="login">Log in</string>
    <string name="already_have_an_account_login">already have an account, login</string>
    <string name="register_here">Register</string>
    <string name="login_btn">Login</string>
    <string name="redirect_to_register">If you do not have an account, register here</string>
    <string name="register_to_login_redirect">if you have an account, click here to log in</string>
    <string name="student_nfc_read_label">Student NFC READ</string>
    <string name="all_the_read_contents_will_display_below">The attendance code will be displayed below</string>
    <string name="continue_with_attendance">Continue with attendance</string>
    <string name="start_up">Start Up</string>
    <string name="student">Student</string>
    <string name="lecturer">Lecturer</string>
    <string name="select_your_role">Select your role</string>
    <string name="profile_txt">Profile</string>
    <string name="first_name_txtview">First name</string>
    <string name="surname_hint">Enter surname</string>
    <string name="firstname_hint">Enter first name</string>
    <string name="email_txtview">E-mail</string>
    <string name="surname_txtview">Surname</string>
    <string name="save">Save</string>
    <string name="attendance_txt">Attendance</string>
    <string name="reports_text">Reports</string>
    <string name="logout">Logout</string>
    <string name="main_menu_txt">Main Menu</string>
    <string name="select_role">select role</string>
    <string name="exit">Exit</string>
    <string name="student_attendance">Student Attendance</string>
    <string name="enter_course_code">course code</string>
    <string name="post">POST</string>
    <string name="enter_the_course_code_for_the_lesson">Enter the course code for the lesson</string>
    <string name="course_code_will_be_displayed_above">Course Code will be displayed above</string>
    <string name="course_code_will_be_displayed_below">Course Code will be displayed below</string>

</resources>