<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:backgroundTint="@color/purple_700">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/read_nfc_data"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="138dp"
        android:layout_above="@id/input_group"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="262dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif"
            android:text="@string/bring_near_the_nfc_tag_to_the_device"
            android:textColor="#FF6200EE"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="419dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/attendance_code_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/the_attendance_code"
            android:background="@drawable/edit_text_top"
            android:hint="@string/the_attendance_code"
            android:inputType=""
            android:padding="15dp" />

        <TextView
            android:id="@+id/attendance_code_descriptor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/all_the_readed_contents_will_display_above"
            android:textColor="#FF6200EE"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/course_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="course code"
            android:background="@drawable/edit_text_top"
            android:hint="@string/enter_course_code"
            android:inputType=""
            android:padding="15dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/course_code_descriptor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/course_code_will_be_displayed_above"
            android:textColor="#FF6200EE"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnwrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/write_nfc"
            android:textAllCaps="false"
            android:textColor="#FF6200EE"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginTop="20dp"
            android:text="@string/testing_purposes"
            android:textAlignment="textEnd"
            android:textColor="#FF6200EE"
            android:textSize="13sp" />
    </LinearLayout>
</RelativeLayout>